kuberentes/kubernetes-documents/.Configuration/ECR images EKS deployment/ingress.yaml
## ingress.yaml ##

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wsi-ingress
    namespace: skills 
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      kubernetes.io/ingress.class: alb
spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wsi
                port:
                  number: 8080
